Refactor investment and portfolio models to use UUIDs for IDs; implement Investment and Portfolio services with CRUD operations and value calculations